# GraduationAnalysis

./: .gitattributes  .gitignore  Analysis_plan.md  CSE6242 Project Notes.docx  Old Proposal.docx  README.md  Research Paper Summaries.docx  SESIoN Proposal.pptx  dave_video_script.pages  dave_video_script.rtf  dave_video_script.txt  environment.yml  pyproject.toml
BenPlots/: Analysis.docx
Code/: NYC_school_analysis.ipynb  fit_nonlinear_model.py  make_wide_all_features_county.py  make_wide_all_features_school.py  make_wide_dataframe.py  make_wide_dataframe_county.py  make_wide_dataframe_school.py  mdb_pandas_api.py  merge_pkl_tables.py  read_mdb_example.py  read_pickle_example.py  run_statistics.py
Data/: 2018GradRatemdbReadMe.docx  Modeling_Nick.Rmd  Modeling_Nick.html  NYC_school_analysis_nick.ipynb  ReadMe_Ben.txt  analysis_nick.Rmd  analysis_nick.html  cornell_modeling_agg.csv  database_notes.md  df_grad_rate_15_pct_school.csv  df_grad_rate_16_pct_county.csv  df_grad_rate_16_pct_school.csv  df_grad_rate_17_pct_county.csv  df_grad_rate_17_pct_school.csv  df_grad_rate_18_pct_county.csv  df_grad_rate_18_pct_school.csv  df_grad_rate_19_pct_county.csv  df_grad_rate_19_pct_enroll.csv  df_grad_rate_19_pct_enroll.pkl  df_grad_rate_19_pct_school.csv  df_grad_rate_pct_county.csv  df_grad_rate_pct_county_merge.pkl  df_grad_rate_pct_school.csv  df_grad_rate_pct_school_merge.pkl  df_staff_qualifications_18_19.pkl  df_staff_qualifications_19_20.pkl  ~$combined_grad_data.csv
NysedAnalysis/: ReadMe_Ben.txt  main_nysed_analysis  make_wide_dataframe_school.py  merge_pkl_tables.py  (+1 more)
(+69 files in other folders)
