[tool.poetry]
name = "cse6242"
version = "0.1.0"
description = ""
authors = ["Dave Dyer <houseofdyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.2.9"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
